--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.5.1",
+    "body-parser": "^1.20.2",
+    "body-parser-xml": "^2.0.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
